syntax = "proto3";

option java_multiple_files = true;
option java_package = "common.services.grpc.olympicgame";
option java_outer_classname = "OlympicGameServiceProto";

package common.services.grpc.olympicgame;

service OlympicGameService {
    rpc GetAllOlympicGames (Empty) returns (OlympicGames) {}
    rpc GetOlympicGame (OlympicGameRequest) returns (OlympicGame) {}
}

message OlympicGameRequest {
    int64 id = 1;
}

message OlympicGames {
    repeated OlympicGame olympics = 1;
}

message OlympicGame {
    int64 id = 1;
    int32 year = 2;
    string season = 3;
    string city = 4;
    string host = 5;
}

message Empty {

}